--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,10 +37,6 @@ header nav ul li {
     margin-left: 25px;
 }
 
-a {
-    color: #ffffff;
-    text-decoration: none;
-}
 
 /* hero banner */
 .hero-image {
@@ -55,6 +51,10 @@ body {
     background-color: #d9dcd6;
 }
 
+a {
+    color: #ffffff;
+    text-decoration: none;
+}
 
 p {
     font-size: 16px;
@@ -70,7 +70,7 @@ p {
     margin-left: 25px;
 }
 
-.content {
+main {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
