--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,7 +29,7 @@ header nav {
     font-size: 20px;
 }
 
-/* specifying there is no list item marker  */
+/* specifying there is no list item marker for nav links  */
 header nav ul {
     list-style-type: none;
 }
@@ -45,7 +45,7 @@ a {
     text-decoration: none;
 }
 
-/* hero banner */
+/* banner at the top of page, cover is used to make it fit without awkward stretching */
 .hero-image {
     height: 800px;
     width: 100%;
@@ -68,7 +68,7 @@ p {
     margin-right: 25px;
 }
 
-/* this positions the 'online reputation management picture right  */
+/* this positions the 'online reputation management' picture right  */
 .float-right {
     float: right;
     margin-left: 25px;
